[package]
name = "jirabars"
version = "0.1.0"
publish = false

[lib]
crate-type = ["cdylib"]
name = "lambda"

[dependencies]
cpython = "0.1"
envy = "0.3"
goji = "0.2"
lando = "0.1"
lazy_static = "1.0"
reqwest = "0.7"
regex = "1.0"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"